<?xml version="1.0" encoding="utf-8"?>
<resources>
	<item type="id" name="tabs"/>

	<!-- source -->
	<item type="id" name="act_show_source_name"/>
	<item type="id" name="act_edit_source_name"/>
	<item type="id" name="act_sources_list"/>
	<item type="id" name="act_sources_list_empty"/>
	<item type="id" name="view_sources_list"/>
	<item type="id" name="view_sources_fab"/>
	<item type="id" name="row_source_name"/>

	<!-- account -->
	<item type="id" name="act_show_account_name"/>
	<item type="id" name="act_show_account_balance"/>
	<item type="id" name="act_show_account_to_pay_credit_card"/>
	<item type="id" name="act_show_account_to_pay_bills"/>
	<item type="id" name="act_show_account_transactions"/>
	<item type="id" name="act_edit_account_name"/>
	<item type="id" name="act_edit_account_balance"/>
	<item type="id" name="act_edit_account_negative"/>
	<item type="id" name="act_edit_account_to_pay_credit_card"/>
	<item type="id" name="act_edit_account_to_pay_bills"/>
	<item type="id" name="act_edit_account_show_in_resume"/>
	<item type="id" name="act_account_list"/>
	<item type="id" name="view_accounts_list"/>
	<item type="id" name="view_accounts_fab"/>
	<item type="id" name="row_account_name"/>
	<item type="id" name="row_account_balance"/>
	<item type="id" name="row_account_to_pay_credit_card"/>

	<!-- bill -->
	<item type="id" name="act_show_bill_name"/>
	<item type="id" name="act_show_bill_amount"/>
	<item type="id" name="act_show_bill_due_date"/>
	<item type="id" name="act_show_bill_init_date"/>
	<item type="id" name="act_show_bill_end_date"/>
	<item type="id" name="act_edit_bill_name"/>
	<item type="id" name="act_edit_bill_amount"/>
	<item type="id" name="act_edit_bill_due_date"/>
	<item type="id" name="act_edit_bill_init_date"/>
	<item type="id" name="act_edit_bill_end_date"/>
	<item type="id" name="act_bill_list"/>
	<item type="id" name="view_bills_list"/>
	<item type="id" name="view_bills_fab"/>
	<item type="id" name="row_bill_name"/>
	<item type="id" name="row_bill_amount"/>
	<item type="id" name="row_bill_balance_due_date_stt"/>
	<item type="id" name="row_bill_due_date"/>
	<item type="id" name="row_bill_dates"/>
	<item type="id" name="row_monthly_resume_bill_name"/>
	<item type="id" name="row_monthly_resume_bill_day"/>
	<item type="id" name="row_monthly_resume_bill_amount"/>

	<!-- card -->
	<item type="id" name="act_show_card_name"/>
	<item type="id" name="act_show_card_account"/>
	<item type="id" name="act_show_card_type"/>
	<item type="id" name="act_show_card_pay_credit_card_bill"/>
	<item type="id" name="act_edit_card_name"/>
	<item type="id" name="act_edit_card_account"/>
	<item type="id" name="act_edit_card_type"/>
	<item type="id" name="act_edit_card_type_debit"/>
	<item type="id" name="act_edit_card_type_credit"/>
	<item type="id" name="view_credit_card_invoice_list"/>
	<item type="id" name="act_credit_card_invoice_pager"/>
	<item type="id" name="view_card_list"/>
	<item type="id" name="view_card_fab"/>
	<item type="id" name="row_card_name"/>
	<item type="id" name="row_card_account"/>

	<!-- chargeable -->
	<item type="id" name="act_chargeable_list_accounts"/>
	<item type="id" name="act_chargeable_list_cards"/>

	<!-- receipt -->
	<item type="id" name="act_show_receipt_name"/>
	<item type="id" name="act_show_receipt_date"/>
	<item type="id" name="act_show_receipt_income"/>
	<item type="id" name="act_show_receipt_source"/>
	<item type="id" name="act_show_receipt_account"/>
	<item type="id" name="act_show_receipt_show_in_resume"/>
	<item type="id" name="row_receipt_name"/>
	<item type="id" name="row_receipt_date"/>
	<item type="id" name="row_receipt_income"/>
	<item type="id" name="row_receipt_source_layout"/>
	<item type="id" name="row_receipt_source"/>
	<item type="id" name="row_receipt_account_layout"/>
	<item type="id" name="row_receipt_account"/>
	<item type="id" name="row_receipt_show_in_resume_stt"/>
	<item type="id" name="view_receipts_pager"/>
	<item type="id" name="view_receipts_fab"/>
	<item type="id" name="act_edit_receipt_name"/>
	<item type="id" name="act_edit_receipt_date"/>
	<item type="id" name="act_edit_receipt_income"/>
	<item type="id" name="act_edit_receipt_source"/>
	<item type="id" name="act_edit_receipt_account"/>
	<item type="id" name="act_edit_receipt_show_in_resume"/>
	<item type="id" name="act_edit_receipt_repetition"/>
	<item type="id" name="act_edit_receipt_installment"/>

	<!-- expense -->
	<item type="id" name="act_edit_expense_name"/>
	<item type="id" name="act_edit_expense_date"/>
	<item type="id" name="act_edit_expense_value"/>
	<item type="id" name="act_edit_expense_repayment"/>
	<item type="id" name="act_edit_expense_chargeable"/>
	<item type="id" name="act_edit_expense_bill"/>
	<item type="id" name="act_edit_expense_pay_next_month"/>
	<item type="id" name="act_edit_expense_show_in_overview"/>
	<item type="id" name="act_edit_expense_show_in_resume"/>
	<item type="id" name="act_edit_expense_repetition"/>
	<item type="id" name="act_edit_expense_installment"/>
	<item type="id" name="act_show_expense_name"/>
	<item type="id" name="act_show_expense_date"/>
	<item type="id" name="act_show_expense_value"/>
	<item type="id" name="act_show_expense_value_to_show_in_overview"/>
	<item type="id" name="act_show_expense_chargeable"/>
	<item type="id" name="act_show_expense_bill"/>
	<item type="id" name="act_show_expense_charge_next_month"/>
	<item type="id" name="view_expenses_pager"/>
	<item type="id" name="view_expenses_fab"/>
	<item type="id" name="view_expenses_monthly_list"/>
	<item type="id" name="row_credit_card_expense_date"/>
	<item type="id" name="row_credit_card_expense_value"/>
	<item type="id" name="row_credit_card_monthly_date"/>
	<item type="id" name="row_credit_card_monthly_source"/>
	<item type="id" name="row_credit_card_monthly_name"/>
	<item type="id" name="row_credit_card_monthly_income"/>
</resources>