<resources>
    <string name="app_name">MyExpenses</string>
	<string name="yes">Sim</string>
	<string name="no">Não</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="accounts">Contas</string>
    <string name="account">Conta</string>
    <string name="balance">Saldo</string>
    <string name="save">Salvar</string>
    <string name="name">Nome</string>
    <string name="date_of_balance">Data do balanço</string>
    <string name="edit">Editar</string>
    <string name="sources">Fontes</string>
    <string name="credit_card">Cartões</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="income">Valor</string>
    <string name="income_to_show_in_overview">Valor para Overview</string>
    <string name="source">Fonte</string>
    <string name="receipt">Recebimento</string>
    <string name="receipts">Recebimentos</string>
    <string name="resume">Resumo</string>
    <string name="delete">Apagar</string>
    <string name="paid_with">Pago com</string>
    <string name="value">Valor</string>
    <string name="expense">Gasto</string>
    <string name="expenses">Gastos</string>
    <string name="type">Tipo</string>
    <string name="debit">Débito</string>
    <string name="credit">Crédito</string>
    <string name="card">Cartão</string>
    <string name="cards">Cartões</string>
    <string name="total">Total</string>
    <string name="total_to_pay">Total a pagar</string>
    <string name="total_to_receive">Total a receber</string>
    <string name="amount">Valor</string>
    <string name="due_date">Vencimento</string>
	<string name="due_date_abbrev">Venc</string>
    <string name="bill">Cobrança</string>
    <string name="bills">Cobranças</string>
	<string name="start">Início</string>
	<string name="end">Fim</string>
	<string name="repetition">Repetição</string>
	<string name="_1">1</string>
	<string name="installments">Parcelas</string>
	<string name="pay_next_month">Ficou para o próximo mês</string>
    <string name="invoice">Fatura</string>
	<string name="empty_invoice">Fatura Zerada</string>
    <string name="filter">Filtar</string>
	<string name="repayment">Ressarcimento</string>
	<string name="total_receipts">Total de recebimentos:</string>
	<string name="total_expenses">Total de gastos:</string>
	<string name="pay_credit_card_bill">Pagar fatura do cartã0</string>
	<string name="show_in_resume">Mostrar no resumo</string>
	<string name="month_transactions">Transações de </string>
	<string name="forecasts">Previsoes</string>
	<string name="month_balance">Saldo ao final do mês</string>
	<string name="next_month_balance">Saldo ao final do próximo mês</string>
	<string name="account_to_pay_credit_card">Conta para pagar cartão de crédito</string>
	<string name="account_to_pay_bills">Conta para pagar cobranças</string>
	<string name="overview">Overview</string>
	<string name="sync">Sincronização</string>
	<string name="show_in_overview">Mostrar no overview</string>
	<string name="week_total">Total da semana:</string>
	<string name="month_total">Total do mês:</string>
    <string name="id">Id</string>
    <string name="created_at">Criado em</string>
    <string name="updated_at">Atualizado em</string>
    <string name="data">Dados</string>
    <string name="to_sync">Sincronizar</string>
	<string name="userJonathan">Jonathan</string>
	<string name="userThainara">Thainara</string>
	<string name="select_user">Selecione o usuário</string>
	<string name="select_card_type">Selecione o tipo do cartão</string>
	<string name="log">Log</string>
	<string name="init_date">Data de início:</string>
	<string name="end_date">Data de fim:</string>
	<string name="log_level">Log level</string>
	<string name="error">Error</string>
	<string name="warning">Warning</string>
	<string name="info">Info</string>
	<string name="debug">Debug</string>
	<string name="negative">Negativo</string>
	<string name="server_url">Url do servidor</string>
	<string name="server_token">Token do servidor</string>
</resources>
